# magnetometer

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: tests.yaml
magnetometer/: __init__.py  __main__.py  asciichartpy.py  main.py
magnetometer/board/: adafruit_lis2mdl.py  adafruit_lis3mdl.py  adafruit_mmc56x3.py  adafruit_tlv493d.py
magnetometer/board/adafruit_bus_device/: i2c_device.py  spi_device.py
magnetometer/dependencies/main/adafruit_mmc56x3/: __init__.py
magnetometer/dependencies/main/adafruit_tlv493d/: __init__.py
magnetometer/sensors/: __init__.py  base.py  lis2mdl.py  lis3mdl.py  mmc56x3.py  sin.py  tlv493d.py
